# Project-A

./: .gitignore  CMakeLists.txt  README.md  notes.c
assets/: inputs.keymap
assets/models/: weirdchamp.mtl
assets/shaders/: basic.frag  basic.vert  basic_pixel.hlsl  basic_vertex.hlsl  debug_pixel.hlsl  debug_vertex.hlsl  light_cube.frag  light_cube_pixel.hlsl  text_pixel.hlsl  ui_pixel.hlsl  ui_vertex.hlsl
include/: IAllocator.h  array.h  common.h  entities.h  enum_with_names.h  game.h  game_state.h  general.h  graphics.h  hashtable.h  input.h  linear_allocator.h  main.h  maths.h  matrix.h  memory.h  new_ui.h  obj_loader.h  physics.h  platform.h  platform_win32.h  rect.h  reflection.h  reflection.h.bak  render.h  serializer.h  shader.h  shaderManager.h  shader_manager.h  simple_draw.h  simulation.h  string_map.h  strings.h  types.h  ui.h  utils.h  vector.h
include/glad/: glad.h
include/reflection/: type.h  type_db.h
lib/: glad64.lib  glad64_d.lib
scripts/: renamePdb.bat
src/: debug.cpp  engine.cpp  entities.cpp  font.cpp  game.cpp  generated.cpp  glad.c  graphics.cpp  graphics_d3d11.cpp  input.cpp  input_callbacks.cpp  linear_allocator.cpp  main.cpp  new_ui.cpp  obj_loader.cpp  physics.cpp  platform_win32.cpp  rect.cpp  reflection.cpp.bak  render.cpp  shader.cpp  shaderManager.cpp  shader_manager.cpp  simple_draw.cpp  simulation.cpp  test.cpp  ui.cpp  vector.cpp
tools/: build.ps1  faster-vcvars.ps1
